<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cognus Water Drinking</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <color name="theme_dark">#269DD8</color>
    <color name="theme_light">#93ceec</color>
    <color name="theme_focuse">#8025d4b4</color>
    <color name="white">#FFFFF</color>
    <color name="greay">#F1F1F1</color>
    <color name="text_disable">#939393</color>
    <color name="text_disable_trance">#90939393</color>
    <color name="text_enable">#269DD8</color>
    <color name="black">#000000</color>
    <color name="white">#ffffff</color>

    <string-array name="life_style_array">
        <item>Inactive</item>
        <item>Active</item>
    </string-array>
    <string-array name="whether_array">
        <item>Comfy</item>
        <item>Hot</item>
    </string-array>

    <string name="calculator">Calculator</string>
    <string name="gender">Gender</string>
    <string name="choose">Choose</string>
    <string name="weight">Weight</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="life_style">Life Style</string>
    <string name="todo">TODO</string>
    <string name="choose_from_list">Choose from List</string>
    <string name="weather">Weather</string>
    <string name="next">Next</string>
    <string name="calculated">Calculated</string>
    <string name="ml">ml</string>
    <string name="oz">oz</string>
    <string name="ok">Ok</string>
    <string name="kg">Kg</string>
    <string name="lbs">lbs</string>
    <string name="pregnant">Pregnant</string>
    <string name="breastfeeding">Breastfeeding</string>
    <string name="_300_ml">300 ml</string>
    <string name="change_value">Change Value</string>
    <string name="set">Set</string>
    <string name="showcase_welcome">Welcome.</string>
    <string name="showcase_weight">Select your weight unit.</string>
    <string name="showcase_containerUnit">Select your container unit.</string>

</resources>