<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/real_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ScrollView
        android:id="@+id/sd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1wee"
        android:layout_below="@+id/title_dialoge"
        android:fillViewport="true"
        android:scrollbars="horizontal|vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".Mesaurment_Unit" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/weight"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_enable" />

                    <TextView
                        android:id="@+id/TextView02"
                        style="@style/disable_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Enter Your Weight"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/edit_text_selectoer"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:padding="5dp" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/weightid1"
                    style="@style/disable_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_active_worker"
                    android:text="@string/lbs" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/text_disable_trance"
                android:padding="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/gender"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_enable" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/disable_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/choose"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sdf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/gender_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_male" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ImageView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_active_worker"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gender_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:visibility="gone" >

                <CheckBox
                    android:id="@+id/pregnant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregnant"
                    android:textColor="@color/text_color" />

                <CheckBox
                    android:id="@+id/breastfeeding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breastfeeding"
                    android:textColor="@color/text_color" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/text_disable_trance"
                android:padding="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/TextView04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/life_style"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_enable" />

                    <TextView
                        android:id="@+id/TextView03"
                        style="@style/disable_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/choose_from_list"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/life_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/todo"
                    android:entries="@array/life_style_array" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_active_worker" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/text_disable_trance"
                android:padding="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/TextView05"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/weather"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_enable" />

                    <TextView
                        android:id="@+id/TextView06"
                        style="@style/disable_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/choose_from_list"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/weather"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/todo"
                    android:entries="@array/whether_array" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_action_whether" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/text_disable_trance"
                android:padding="3dp" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignBottom="@+id/linearLayout1wee"
        android:layout_alignParentLeft="true"
        android:background="@color/theme_light"
        android:padding="3dp" />

    <TextView
        android:id="@+id/title_dialoge"
        style="@style/disable_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:text="@string/calculator"
        android:textColor="@color/theme_dark" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignBottom="@+id/title_dialoge"
        android:layout_alignParentLeft="true"
        android:background="@color/theme_light"
        android:padding="3dp" />

    <LinearLayout
        android:id="@+id/linearLayout1wee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/linearLayout1ws"
        android:gravity="bottom|center_vertical"
        android:orientation="horizontal"
        android:padding="5dp" >

        <LinearLayout
            android:id="@+id/DF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/calculated"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_enable" />

            <EditText
                android:id="@+id/calculated_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_selectoer"
                android:ems="10"
                android:inputType="numberDecimal"
                android:padding="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/weight_id"
            style="@style/disable_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:text="@string/ml"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1ws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_selectoer"
            android:padding="3dp"
            android:text="@string/back"
            android:textColor="@color/buton_text_color" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/button_selectoer"
            android:padding="3dp"
            android:text="@string/next"
            android:textColor="@color/buton_text_color" />
    </LinearLayout>

</RelativeLayout>